--- a/cliente/properties/dados.properties
+++ b/cliente/properties/dados.properties
@@ -1,2 +1,6 @@
-prop.server.host = 127.0.0.1
-prop.server.port = 9876
+prop.client.host = 127.0.0.1
+prop.client.port = 9876
+
+prop.client2.port = 9877
+
+
